--- a/www.topmonks.cz/src/html/jak-pracujeme/price-fx/index.html
+++ b/www.topmonks.cz/src/html/jak-pracujeme/price-fx/index.html
@@ -1,6 +1,6 @@
 {% extends 'layouts/topmonks.html' %}
 {% set page = '_case-studies__adler' %}
-{% block title %} Price&nbsp;f(x) - Jak pracujeme - TopMonks{% endblock %}
+{% block title %} PriceFx - Jak pracujeme - TopMonks{% endblock %}
 {% block head %}
 <link rel="stylesheet" href="/stylesheets/case-studies-common.css">
 <style>
@@ -36,8 +36,8 @@
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <h2>Price&nbsp;f(x)</h2>
-        <h3>Price&nbsp;f(x) je přední softwarovou společností poskytující SaaS řešení pro oblasti cenotvorby a&nbsp;CPQ software (Configure Price Quote). Z “pricingového” startupu se během pár let stala mezinárodní společnost s miliardovou valuací a TopMonks byli při tom.</h3>
+        <h2>PriceFx</h2>
+        <h3>PriceFx je přední softwarovou společností poskytující SaaS řešení pro oblasti cenotvorby a&nbsp;CPQ software (Configure Price Quote). Z “pricingového” startupu se během pár let stala mezinárodní společnost s miliardovou valuací a TopMonks byli při tom.</h3>
         <ul class="tm-case-study__project-numbers-list">
           <li class="tm-case-study__project-numbers-item"><strong class="tm-case-study__project-number">2</strong>
             <p>roky od startupu k fungující firmě</p></li>
@@ -55,8 +55,8 @@
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner tm-layout-wrapper">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-img-wrapper">
-          <img title="snímek obrazovky z aplikace Price f(x)"
-               alt="[photo] snímek obrazovky z aplikace Price f(x)"
+          <img title="snímek obrazovky z aplikace PriceFx"
+               alt="[photo] snímek obrazovky z aplikace PriceFx"
                src="https://res.cloudinary.com/topmonks/image/upload/w_1008,q_auto,f_auto,dpr_auto/v1534518123/topmonks.com/pricefx_hero.png"
                srcset="https://res.cloudinary.com/topmonks/image/upload/w_1008,q_auto,f_auto,dpr_auto/v1534518123/topmonks.com/pricefx_hero.png 1x,
                       https://res.cloudinary.com/topmonks/image/upload/w_1008,q_auto,f_auto,dpr_2/v1534518123/topmonks.com/pricefx_hero.png 2x"/>
@@ -72,7 +72,7 @@
       <div
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-case-study__section tm-case-study__section--right tm-case-study__section--success">
         <h3>Proměníme váš startup v úspěšnou společnost</h3>
-        <p>Monkové se do projektu Price&nbsp;f(x) pustili v rámci svého startupového studia, kdy poskytují vývoj a technologické konzultace za podíl ve společnosti - jako formu investice. Price&nbsp;f(x) je důkazem toho, že v TopMonks mají dostatečnou expertízu a kvalifikaci k tomu, aby proměnili váš startup v&nbsp;úspěšnou, mezinárodní společnost.</p>
+        <p>Monkové se do projektu PriceFx pustili v rámci svého startupového studia, kdy poskytují vývoj a technologické konzultace za podíl ve společnosti - jako formu investice. PriceFx je důkazem toho, že v TopMonks mají dostatečnou expertízu a kvalifikaci k tomu, aby proměnili váš startup v&nbsp;úspěšnou, mezinárodní společnost.</p>
       </div>
     </div>
   </div>
@@ -106,7 +106,7 @@
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-case-study__section tm-case-study__section--feedback">
         <h3>TopMonks i nadále v roli partnera</h3>
-        <p>TopMonks i po vypuštění Price&nbsp;f(x) do světa nadále zůstává v&nbsp;roli partnera, který poskytuje profesionální konzultanty, zajišťuje technickou podporu rapidně rostoucího portfólia zákazníků a&nbsp;v&nbsp;neposlední řadě se podílí na zlepšování UX, se&nbsp;kterým má rovněž bohaté zkušenosti.</p>
+        <p>TopMonks i po vypuštění PriceFx do světa nadále zůstává v&nbsp;roli partnera, který poskytuje profesionální konzultanty, zajišťuje technickou podporu rapidně rostoucího portfólia zákazníků a&nbsp;v&nbsp;neposlední řadě se podílí na zlepšování UX, se&nbsp;kterým má rovněž bohaté zkušenosti.</p>
       </div>
     </div>
   </div>
