Smazány znaky u Company Values -tm.cz + .com

--- a/www.topmonks.cz/src/html/o-nas/index.html
+++ b/www.topmonks.cz/src/html/o-nas/index.html
@@ -97,15 +97,15 @@
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h2>Firemní hodnoty</h2>
         <ul>
-          <li><b>导</b>Neustále vzdělávej sebe i ostatní. Předávání znalostí je u nás povinnost.</li>
-          <li><b>灵</b>Buď podnikavý. Vlastní projekty Monků jsou velmi vítány.</li>
-          <li><b>勇</b>Buď statečný. Poskytuj upřímnou a konstruktivní zpětnou vazbu bez ohledu na okolnosti.</li>
-          <li><b>自由</b>Tvoje svoboda končí tam, kde začíná svoboda ostatních.</li>
-          <li><b>看板</b>>Umění je odvést kvalitní práci, ne strávit nad ní spoustu hodin.</li>
-          <li><b>改善</b>Život je plný změn. Přijmi to.</li>
-          <li><b>无国界</b>Naše firma je živý organismus propojený s našimi partnery, zákazníky i komunitou. Neexistují žádné hranice.</li>
-          <li><b>共享</b> Dávej a bude ti dáno.</li>
-          <li><b>怪事</b> Zvláštnost, nekonvenčnost je vítána.</li>
+          <li>Neustále vzdělávej sebe i ostatní. Předávání znalostí je u nás povinnost.</li>
+          <li>Buď podnikavý. Vlastní projekty Monků jsou velmi vítány.</li>
+          <li>Buď statečný. Poskytuj upřímnou a konstruktivní zpětnou vazbu bez ohledu na okolnosti.</li>
+          <li>Tvoje svoboda končí tam, kde začíná svoboda ostatních.</li>
+          <li>>Umění je odvést kvalitní práci, ne strávit nad ní spoustu hodin.</li>
+          <li>Život je plný změn. Přijmi to.</li>
+          <li>Naše firma je živý organismus propojený s našimi partnery, zákazníky i komunitou. Neexistují žádné hranice.</li>
+          <li>Dávej a bude ti dáno.</li>
+          <li>Zvláštnost, nekonvenčnost je vítána.</li>
         </ul>
         <p>Jestli tě baví naše hodnoty a myšlenky, <a href="/volna-mista/">přidej se k nám</a>. Nebo nám <a href="mailto:sales@topmonks.com">dej vědět</a>, jak ti můžeme pomoci s tvým projektem. Anebo nás jednoduše <a href="/kontakt/">přijď navštívit</a> na jednu z našich mnoha akcí. Moc rádi potkáme nové a zajímavé lidi.</p>
       </div>
