--- a/www.topmonks.com/src/html/about-us/index.html
+++ b/www.topmonks.com/src/html/about-us/index.html
@@ -85,17 +85,17 @@
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h2>Company values</h2>
         <ul>
-          <li><b>导</b> Learn or die. Teach or die. Only learning and teaching brains flourish.</li>
-          <li><b>灵</b> Have an entrepreneurial mind. Spin-offs of our former team members are welcome.</li>
-          <li><b>勇</b> Be brave. Provide a sincere feedback regardless of the circumstances.</li>
-          <li><b>自由</b> Your freedom can’t affect the freedom of others.</li>
-          <li><b>看板</b> Success is a delivery not the time spent. Don’t wait to be asked for your next task, find
+          <li>Learn or die. Teach or die. Only learning and teaching brains flourish.</li>
+          <li>Have an entrepreneurial mind. Spin-offs of our former team members are welcome.</li>
+          <li>Be brave. Provide a sincere feedback regardless of the circumstances.</li>
+          <li>Your freedom can’t affect the freedom of others.</li>
+          <li>Success is a delivery not the time spent. Don’t wait to be asked for your next task, find
             it yourself.</li>
-          <li><b>改善</b> Life is a constant change. Embrace it.</li>
-          <li><b>无国界</b> Our company is a living organism interconnected with our partners, customers, and community.
+          <li>Life is a constant change. Embrace it.</li>
+          <li>Our company is a living organism interconnected with our partners, customers, and community.
             There are no borders.</li>
-          <li><b>共享</b> Give and you shall receive.</li>
-          <li><b>怪事</b> Weirdness, non-conformity is welcome.</li>
+          <li>Give and you shall receive.</li>
+          <li>Weirdness, non-conformity is welcome.</li>
         </ul>
         <p>If you like these ideas, come <a href="/jobs/">join us</a>. Or, <a href="mailto:sales@topmonks.com">have your project</a> delivered by us. Or, simply <a href="/contact/">visit us</a>. We enjoy meeting interesting people.</p>
       </div>
