--- a/www.topmonks.cz/src/html/kontakt/index.html
+++ b/www.topmonks.cz/src/html/kontakt/index.html
@@ -150,16 +150,16 @@
         itemprop="employee" itemscope
         itemtype="https://schema.org/Person">
         <h3><b>Sales</b></h3>
-        <p class="box_text-about">Pokud jste střední nebo velká firma, obraťte se na Láďu. Pomůžeme
+        <p class="box_text-about">Pokud jste střední nebo velká firma, obraťte se na Ondřeje. Pomůžeme
           vám najít řešení problému, kterému aktuálně čelíte.</p>
         <div class="mdc-layout-grid__inner">
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
-            <img alt="[foto] Ladislav Gerencséry" src="https://insight.topmonks.com/avatar/ladislav-gerencsery"
+            <img alt="[foto] Ladislav Gerencséry" src="https://insight.topmonks.com/avatar/ondrej-tupy"
                  onerror="this.onerror=null; this.src='/images/monk_logo-c877778634.png'" width="112" height="112">
           </div>
           <div class="box_member-contact mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
-            <p><span itemprop="name">Ladislav Gerencséry</span><br>
-              <a itemprop="telephone" href="tel:+420606637915">+420&nbsp;606&nbsp;637&nbsp;915</a><br/>
+            <p><span itemprop="name">Ondrej Tupý</span><br>
+              <a itemprop="telephone" href="tel:+420730581488">+420&nbsp;730&nbsp;581&nbsp;488</a><br/>
               <a itemprop="email" href="mailto:sales&#64;topmonks.com">sales@​topmonks.com</a></p>
           </div>
         </div>
