Adding Ondrej to sales.

--- a/www.topmonks.com/src/html/index.html
+++ b/www.topmonks.com/src/html/index.html
@@ -569,20 +569,20 @@ TopMonks - Software development partner for your business
         class="box box-member mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop"
         itemprop="employee" itemscope="" itemtype="https://schema.org/Person"><h3><b>Sales</b></h3>
         <p class="box_text-about">If you're medium or large size organization and you're looking to solve
-          existing challenge, please get in touch with&nbsp;Gery.</p>
+          existing challenge, please get in touch with&nbsp;Ondrej.</p>
         <div class="mdc-layout-grid__inner">
           <div class="person--photo mdc-layout-grid__cell mdc-layout-grid__cell--span-4"><img
-            alt="[foto] Ladislav Gerencséry"
-            src="https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_1,f_auto/https://insight.topmonks.com/avatar/ladislav-gerencsery"
-            srcset="https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_1,f_auto/https://insight.topmonks.com/avatar/ladislav-gerencsery 1x,
-                    https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_1.5,f_auto/https://insight.topmonks.com/avatar/ladislav-gerencsery 1.5x,
-                    https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_2,f_auto/https://insight.topmonks.com/avatar/ladislav-gerencsery 2x,
-                    https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_3,f_auto/https://insight.topmonks.com/avatar/ladislav-gerencsery 3x"
+            alt="[foto] Ondrej Tupý"
+            src="https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_1,f_auto/https://insight.topmonks.com/avatar/ondrej-tupy"
+            srcset="https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_1,f_auto/https://insight.topmonks.com/avatar/ondrej-tupy 1x,
+                    https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_1.5,f_auto/https://insight.topmonks.com/avatar/ondrej-tupy 1.5x,
+                    https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_2,f_auto/https://insight.topmonks.com/avatar/ondrej-tupy 2x,
+                    https://res.cloudinary.com/topmonks/image/fetch/w_112,dpr_3,f_auto/https://insight.topmonks.com/avatar/ondrej-tupy 3x"
             onerror="this.onerror=null; this.src='/assets/img/monk_logo-c877778634.png'"
             width="112" height="112"></div>
           <div class="box_member-contact mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
-            <p><span itemprop="name">Ladislav Gerencséry</span><br>
-              <a itemprop="telephone" href="tel:+420606637915">+420&nbsp;606&nbsp;637&nbsp;915</a><br>
+            <p><span itemprop="name">Ondrej Tupý</span><br>
+              <a itemprop="telephone" href="tel:+420730581488">+420&nbsp;730&nbsp;581&nbsp;488</a><br>
               <a itemprop="email" href="mailto:sales@topmonks.com">sales@​topmonks.com</a>
           </p></div>
         </div>
