Photo ALT change

--- a/www.topmonks.cz/src/html/index.html
+++ b/www.topmonks.cz/src/html/index.html
@@ -566,7 +566,7 @@
           vám najít řešení problému, kterému aktuálně čelíte.</p>
         <div class="mdc-layout-grid__inner">
           <div class="person--photo mdc-layout-grid__cell mdc-layout-grid__cell--span-4"><img
-            alt="[foto] Ladislav Gerencséry"
+            alt="[foto] Ondrej Tupý"
             src="https://insight.topmonks.com/avatar/ondrej-tupy"
             onerror="this.onerror=null; this.src='/images/monk_logo-c877778634.png'"
             width="112" height="112"></div>
