--- a/www.topmonks.cz/src/html/kontakt/index.html
+++ b/www.topmonks.cz/src/html/kontakt/index.html
@@ -154,7 +154,7 @@
           vám najít řešení problému, kterému aktuálně čelíte.</p>
         <div class="mdc-layout-grid__inner">
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
-            <img alt="[foto] Ladislav Gerencséry" src="https://insight.topmonks.com/avatar/ondrej-tupy"
+            <img alt="[foto] Ondrej Tupý" src="https://insight.topmonks.com/avatar/ondrej-tupy"
                  onerror="this.onerror=null; this.src='/images/monk_logo-c877778634.png'" width="112" height="112">
           </div>
           <div class="box_member-contact mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
