--- a/www.topmonks.cz/src/html/v2/index.html
+++ b/www.topmonks.cz/src/html/v2/index.html
@@ -74,6 +74,8 @@
         <div class="box box--lead box--mobile-only">
           <p>Pomáháme našim klientům odemknout potenciál jejich IT.
             Díky tomu jsou pak schopni pružně reagovat na potřeby trhu a více vydělat.</p>
+
+          <a class="action-button jumbotron__cta" href="#kontakt">Chci vydělávat víc</a>
         </div>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
