Texty k analyze bezpecnosti pro v2

--- a/www.topmonks.cz/src/html/v2/index.html
+++ b/www.topmonks.cz/src/html/v2/index.html
@@ -190,9 +190,9 @@
   </defs>
   </svg>
       <h3>Analýza bezpečnosti</h3>
-      <p>Lidé stále častě navštěvují weby z mobilních zařízení,
-        kterým na staré postupy tvorby webů nestačí dech. Umíme najít slabá místa
-        a vdechnout vaším stránkám nový život. Proč jezdit se zataženou ruční brzdou?</p>
+      <p>Zákazníci se na vašem webu potřebují cítit zcela bezpečně, jinak odejdou.
+         Staráte se dobře o jejich hesla? Máte bezpečné platby? Splňujete nejnovější standardy?
+         <strong>Zajistíme, aby byl váš web bezpečný na první i na druhý pohled.</strong></p>
       </div>
       <div class="mdc-layout-grid__cell box">
         <svg width="145" height="148" viewBox="0 0 145 148" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -429,9 +429,11 @@
   </defs>
   </svg>
       <h3>Analýza bezpečnosti</h3>
-      <p>Lidé stále častě navštěvují weby z mobilních zařízení,
-        kterým na staré postupy tvorby webů nestačí dech. Umíme najít slabá místa
-        a vdechnout vaším stránkám nový život. Proč jezdit se zataženou ruční brzdou?</p>
+      <p>Jedním z nejčastějších bezpečnostních rizik je únik informací zevnitř, byť ne záměrný.
+         Jak v týmu sdílíte hesla? Běží vaše testovací a vývojová prostředí v továrním nastavení?
+         Má váš tým dostatečný prostor se věnovat bezpečnosti? Projdeme s vámi klíčové prvky,
+         odhalíme možná rizika a <strong>navrhneme, jak na to jít bezpečně i snadno</strong>.
+         </p>
       </div>
       <div class="mdc-layout-grid__cell box">
         <svg width="145" height="148" viewBox="0 0 145 148" fill="none" xmlns="http://www.w3.org/2000/svg">
