--- a/www.topmonks.cz/src/html/v2/index.html
+++ b/www.topmonks.cz/src/html/v2/index.html
@@ -190,9 +190,9 @@
   </defs>
   </svg>
       <h3>Analýza bezpečnosti</h3>
-      <p>Zákazníci se na vašem webu potřebují cítit zcela bezpečně, jinak odejdou.
-         Staráte se dobře o jejich hesla? Máte bezpečné platby? Splňujete nejnovější standardy?
-         <strong>Zajistíme, aby byl váš web bezpečný na první i na druhý pohled.</strong></p>
+      <p>Zákazníci se na vašem webu potřebují cítit zcela bezpečně.
+         Staráte se dobře o jejich hesla a citlivá data? Splňujete nejnovější standardy?
+         Zajistíme, aby byl váš web <strong>bezpečný na první i na druhý pohled</strong>.</p>
       </div>
       <div class="mdc-layout-grid__cell box">
         <svg width="145" height="148" viewBox="0 0 145 148" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -430,9 +430,9 @@
   </svg>
       <h3>Analýza bezpečnosti</h3>
       <p>Jedním z nejčastějších bezpečnostních rizik je únik informací zevnitř, byť ne záměrný.
-         Jak v týmu sdílíte hesla? Běží vaše testovací a vývojová prostředí v továrním nastavení?
-         Má váš tým dostatečný prostor se věnovat bezpečnosti? Projdeme s vámi klíčové prvky,
-         odhalíme možná rizika a <strong>navrhneme, jak na to jít bezpečně i snadno</strong>.
+         Jak v týmu sdílíte hesla? Běží vaše neprodukční prostředí v továrním nastavení?
+         Má váš tým prostor se věnovat bezpečnosti? Projdeme s vámi klíčové prvky,
+         odhalíme rizika a <strong>navrhneme, jak na to jít bezpečně i snadno</strong>.
          </p>
       </div>
       <div class="mdc-layout-grid__cell box">
