--- a/www.topmonks.cz/src/html/v2/index.html
+++ b/www.topmonks.cz/src/html/v2/index.html
@@ -89,7 +89,7 @@
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <a href="https://www.pricefx.eu/site/" title="Pricef(x) homepage">{{sprite('img_logo_pricefx', '[logo] Pricef(x)')}}</a>
+        <a href="https://www.pricefx.eu/site/" title="Pricefx homepage">{{sprite('img_logo_pricefx', '[logo] Pricefx')}}</a>
         <a href="https://swarmpit.io/" title="Swarmpit homepage">{{sprite('img_logo_swarmpit', '[logo] Swarmpit')}}</a>
         <a href="https://www.purposefly.com/frank/" title="PurposeFly homepage">{{sprite('img_logo_purposefly', '[logo] PurposeFly')}}</a>
         <a href="https://github.com/GoogleChrome/lighthouse" title="Lighthouse homepage">{{sprite('img_logo_lighthouse', '[logo] Lighthouse')}}</a>
