--- a/www.topmonks.com/src/html/case-studies/price-fx/index.html
+++ b/www.topmonks.com/src/html/case-studies/price-fx/index.html
@@ -1,6 +1,6 @@
 {% extends 'layouts/topmonks.html' %}
 {% set page = '_case-studies__adler' %}
-{% block title %} PriceFx - Case Studies - TopMonks{% endblock %}
+{% block title %} Pricefx - Case Studies - TopMonks{% endblock %}
 {% block head %}
 <link rel="stylesheet" href="/assets/css/case-studies-common.css">
 <style>
@@ -36,8 +36,10 @@
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <h2>PriceFx</h2>
-        <h3>PriceFx is the leading software company providing SaaS pricing and CPQ (Configure Price Quote) solutions. Within just a few years, it has turned from a startup into a multi-national company with a valuation of approximately 1 billion (CZK) and TopMonks were at the beginning.</h3>
+        <h2>Pricefx</h2>
+        <h3>Pricefx is the leading software company providing SaaS pricing and CPQ (Configure Price Quote) solutions.
+          Within just a few years, it has turned from a startup into a multi-national company with a valuation
+          of approximately 1 billion (CZK) and TopMonks were at the beginning.</h3>
         <ul class="tm-case-study__project-numbers-list">
           <li class="tm-case-study__project-numbers-item"><strong class="tm-case-study__project-number">2</strong>
             <p>years from startup to a working company</p></li>
@@ -55,8 +57,8 @@
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner tm-layout-wrapper">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-img-wrapper">
-          <img title="PriceFx in-app screenshot"
-               alt="[photo] PriceFx in-app screenshot"
+          <img title="Pricefx in-app screenshot"
+               alt="[photo] Pricefx in-app screenshot"
                src="https://res.cloudinary.com/topmonks/image/upload/w_1008,q_auto,f_auto,dpr_auto/v1534518123/topmonks.com/pricefx_hero.png"
                srcset="https://res.cloudinary.com/topmonks/image/upload/w_1008,q_auto,f_auto,dpr_auto/v1534518123/topmonks.com/pricefx_hero.png 1x,
                       https://res.cloudinary.com/topmonks/image/upload/w_1008,q_auto,f_auto,dpr_2/v1534518123/topmonks.com/pricefx_hero.png 2x"/>
@@ -72,7 +74,9 @@
       <div
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-case-study__section tm-case-study__section--right tm-case-study__section--success">
         <h3>We will turn your startup into a successful company</h3>
-        <p>Monks got involved in the PriceFx project within their startup studio, where they provide technical consultations and development in exchange for equity - as an investment. Price&nbsp;f(x) is a proof TopMonks has the expertise and qualification to assist you in turning your startup into a&nbsp;successful multi-national corporation.</p>
+        <p>Monks got involved in the Pricefx project within their startup studio, where they provide technical
+          consultations and development in exchange for equity - as an investment. Pricefx is a proof TopMonks
+          has the expertise and qualification to assist you in turning your startup into a&nbsp;successful multi-national corporation.</p>
       </div>
     </div>
   </div>
@@ -83,7 +87,11 @@
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-case-study__section tm-case-study__section--expand">
         <h3>They saw a little sense in how CPQ solutions were built</h3>
-        <p>In the beginning, there were a bunch of people with experience in automated price calculation (CPQ software) who saw little sense in how CPQ solutions were built at that time. Robust systems were overpriced, required installation on customer premises, significant customer-side resources (financial, personal and technical), installation and configuration took ages, and any modification or upgrade was a living nightmare.</p>
+        <p>In the beginning, there were a bunch of people with experience in automated price calculation
+          (CPQ software) who saw little sense in how CPQ solutions were built at that time. Robust systems
+          were overpriced, required installation on customer premises, significant customer-side resources
+          (financial, personal and technical), installation and configuration took ages, and any modification
+          or upgrade was a living nightmare.</p>
       </div>
     </div>
   </div>
@@ -95,7 +103,10 @@
       <div
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-case-study__section tm-case-study__section--right tm-case-study__section--cloud">
         <h3>Product would greatly benefit from cloud technologies</h3>
-        <p>Pricing is vital for customers, however often unrelated to their core business. In other words almost a perfect definition of a&nbsp;product that would greatly benefit from cloud technologies, a&nbsp;field where TopMonks feels at home. Thus a customer has a&nbsp;service that deals with his vital problem available and can freely focus on his core business development.</p>
+        <p>Pricing is vital for customers, however often unrelated to their core business. In other words almost
+          a perfect definition of a&nbsp;product that would greatly benefit from cloud technologies, a&nbsp;field where
+          TopMonks feels at home. Thus a customer has a&nbsp;service that deals with his vital problem available and
+          can freely focus on his core business development.</p>
       </div>
     </div>
   </div>
@@ -106,7 +117,9 @@
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-case-study__section tm-case-study__section--feedback">
         <h3>Partnership with TopMonks remains</h3>
-        <p>Partnership with TopMonks remains even after PriceFx release. However, the role has shifted towards providing consulting professionals, technical support to the rapidly expanding customer portfolio and also helping to improve UX which is yet another strong suit in TopMonks' skill closet.</p>
+        <p>Partnership with TopMonks remains even after Pricefx release. However, the role has shifted
+          towards providing consulting professionals, technical support to the rapidly expanding customer
+          portfolio and also helping to improve UX which is yet another strong suit in TopMonks' skill closet.</p>
       </div>
     </div>
   </div>
