Updated SS page

--- a/studio.topmonks.com/src/html/index.html
+++ b/studio.topmonks.com/src/html/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Startup Studio - TopMonks</title>
+  <title>TopMonks Startup Studio</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta http-equiv="Accept-CH" content="DPR,Viewport-Width,Width">
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
@@ -324,17 +324,17 @@
         </div>
         <div
           class="portfolio-logo mdc-layout-grid__cell">
-         <a title="website of PriceFx" href="https://www.pricefx.eu/site/"><img src="/images/logo/pricefx_logo.svg" alt="Logo PriceFx" height="70px" width="137"></a>
-          <p>PriceFx is the pricing suite designed especially for the needs of a holistic pricing process.</p>
+         <a title="website of Pricefx" href="https://www.pricefx.eu/site/"><img src="/images/logo/pricefx.svg" alt="Logo Pricefx" height="68" width="152"></a>
+          <p>Pricefx is the pricing suite designed especially for the needs of a holistic pricing process.</p>
         </div>
         <div
           class="portfolio-logo mdc-layout-grid__cell">
-          <a title="website of Techloop.io" href="https://techloop.io/"> <img src="/images/logo/techloop.io_logo.svg" alt="Logo Techloop.io" height="70px" width="226"></a>
+          <a title="website of Techloop.io" href="https://techloop.io/"> <img src="/images/logo/techloop.svg" alt="Logo Techloop.io" height="68" width="226"></a>
           <p>Platform for matching IT professionals with hiring companies.</p>
         </div>
         <div
           class="portfolio-logo mdc-layout-grid__cell">
-          <a title="website of Go Real Europe" href="https://www.gorealeurope.com/"> <img src="/images/logo/GoRealEurope_logo.svg" alt="Logo Go Real Europe" height="70px" width="118"></a>
+          <a title="website of Go Real Europe" href="https://www.gorealeurope.com/"> <img src="/images/logo/GoRealEurope_logo.svg" alt="Logo Go Real Europe" height="68" width="120"></a>
           <p>Europe Trip Planning app for 21st century.</p>
         </div>
       </div>
